<resources>
    <string name="code">en</string>
    <string name="app_name">Calendar + Sunnah Prayer Times</string>
    <string name="widget_name">Calendar + Sunnah Prayer Times</string>
    <string name="widget_mini_name">Calendar + Sunnah Prayer Times (mini)</string>
    <string name="closeDrawer">Close</string>
    <string name="openDrawer">Open</string>
    <string name="accept">OK</string>
    <string name="add">Add</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="continue_button">Continue</string>
    <string name="outdated_app">Due to being outdated, things can be inaccurate</string>
    <string name="update">Update</string>
    <string name="about_developers_list" translatable="false">"ebraminio: Ebrahim Byagowi
hamidsafdari: Hamid Safdari
behdad222: Behdad Abedi
HrBDev: Hamidreza Bayat
alirezaafkar: Alireza Afkar
MEHDIMYADI: Mehdi Dimyadi
runo280: Ruhollah Nosrati
FtADev: Fatemeh Akhlaghi
MasoodFallahpoor: Masood Fallahpoor"</string>
    <string name="about_designers_list" translatable="false">"MEHDIMYADI: Mehdi Dimyadi
MehraraAbedi: Mehrara Abedi
behdude: Behdad Pournader
ImanSoltanian: Iman Soltanian"</string>
    <string name="about_translators_list" translatable="false">"yethrosh: Muhammad Shuaib
LordArma: Alireza Moayed Ahmadi
Matjafari: Mahdieh Jafari
raminjavadi: Ramin Javadi"</string>
    <string name="about_contributors_list" translatable="false">"La-Volpe: Javad Arjmandi
mehdisadeghi: Mehdi Sadeghi
abbas-oveissi: Abbas Oveissi
aysha319: Aysha Aminnejad
Tenkei: Keivan Esbati
mohamadhadibi: Mohammad Hadi
alirezaivaz: Alireza Ivaz
AminBakhtiyari: Amin Bakhtiyari"</string>
    <string name="about_help_subtitle" translatable="false">این نسخهٔ سال %s-%s است.</string>
    <string name="about_help_sum" translatable="false">"برای اطمینان از صحت مناسبت‌های قمری سال‌های بعد نیاز است چند ماه پیش از تحویل سال، اگر توسعهٔ برنامه هنوز ادامه داشت، برنامه را به‌روز کنید چرا که آن مناسبت‌های قمری تا زمان انتشار نسخهٔ جدید به صورت رسمی در تقویم کشور مشخص نشده‌اند. در صورتی که توسعهٔ برنامه در سالی که از برنامه استفاده می‌کنید ادامه نداشت، پیشنهاد می‌شود مراقب صحت تعطیلی‌ها به کمک منابع دیگر باشید. مناسبت‌های خورشیدی رسمی برای همه سال‌ها اعمال شده است ولی ممکن است در سالی که آن مناسبت را در تقویم مشاهده می‌کنید، آن مناسبت تعطیل رسمی نبوده یا دیگر نباشد.

مناسبت‌های این برنامه با تقویم ایران و افغانستان تنظیم شده‌است. ممکن است در کشورهای دیگر این مناسبت‌ها کاربرد نداشته باشند ولی در امکانات مختلف برنامه سعی شده جامعیت برنامه حفظ شود. به همین منظور می‌توانید با تنظیم مناسبت‌ها آن را به حالت دلخواه خود درآورید.

دسترسی مکان به منظور امکان تنظیم اوقات شرعی در تنظیمات گرفته شده است، اگر مکانتان مثلاً از شهری به شهری دیگر تغییر می‌کند نیاز است با هر تغییر، آن را تنظیم کنید.

تقویم قمری ممکن است دارای اشکال باشد به همین دلیل ممکن است نیاز باشد به صورت دستی در تنظیمات آن را اصلاح کنید. راه‌حل‌هایی از جمله به‌روزرسانی اختلاف از طریق اینترنت مطلوب توسعهٔ این برنامه نبوده به این دلیل که نیازمند دسترسی اینترنت است و هدف توسعهٔ این برنامه عدم اخذ دسترسی تا جای ممکن بوده است.

تضمینی در صحت کارکرد برنامه وجود ندارد، فقط سعی شده برنامه‌ای مفید ارائه شود. مشهور است که هیچ برنامه، نرم‌افزار و الگوریتمی بی‌نقص نیست و ممکن است نیاز باشد خروجی برنامه را با منابع دیگر بررسی کنید. ممکن است به دلیل حجم کم حافظهٔ دستگاه، برنامه قادر به به‌روزرسانی شمارهٔ روز ماه در نوار اعلان نباشد و روز عقب‌تری را نشان دهد. پیشنهاد می‌شود سایر برنامه‌های دستگاه را که حافظهٔ اضافی گرفته‌اند حذف کنید یا گزینهٔ نوار اعلان برنامه را غیرفعال کنید یا برنامهٔ دیگری را بیازمایید.

انتخاب طراحی برنامه این بوده که اذان فقط شامل چهار الله اکبر اول باشد ولی به راحتی می‌توانید صدای اذان مورد نظر خود را در تنظیمات از بین صداهای موجود در دستگاه‌تان انتخاب کنید.

این تقویم به صورت شخصی، بدون هیچ منفعت مالی و با کمک افراد و کتابخانه‌های نرم‌افزاری‌ای که در زیر ذکر شده است، به امید اینکه مفید باشد، طراحی شده‌است و با مجوز جی‌پی‌ال نسخهٔ ۳ انتشار یافته است.

مجوز جی‌پی‌ال به معنی آن است که استفاده از کدهای این برنامه فقط در صورتی امکان‌پذیر است که کدهای تغییر داده‌شده و به پروژه اضافه‌شده (به اصطلاح لینک‌شده) تحت همین مجوز به صورت آزاد منتشر شوند. انتخاب این مجوز به دلیل استفاده از کدهایی با همین مجوز بوده است و استفاده از کدهای این برنامه در برنامه‌های غیر متن‌باز از نظر مجوز استفاده‌شده در این پروژه و خصوصاً کتابخانه‌های جی‌پی‌ال استفاده شده نادرست است و در صورت استفاده از کدها و کتابخانه‌های جی‌پی‌ال نیاز است منبع و مجوز آن را به دقت در چنین صفحه‌ای در برنامه بیاورید.

خط کردی در صداوسیمای کردستان ایران http://kurdistan.irib.ir، خط آذری در «سفینهٔ تبریز» کتیبهٔ نگهداری شده در مجلس ایران http://mtif.org/news/65117 و خط گیلکی در نشریهٔ گیلان اؤجا http://v6rg.com، دارای مجوز از وزارت فرهنگ جمهوری اسلامی ایران https://gilan.farhang.gov.ir/ershad_content/media/image/2017/08/527661_orig.pdf و کتاب «فرهنگ گیل و دیلم» انتشارات امیرکبیر به کار گرفته شده است. زبان فارسی در افغانستان به نام دری شناخته می‌شود و در کنار زبان پشتو دو زبان رسمی افغانستان هستند که هر دو در این برنامه پشتیبانی می‌شود. این نرم‌افزار مشارکت‌کنندگانی از افغانستان نیز داشته است، جهت گسترش کاربرد این تقویم به جای‌های دیگر، به انگلیسی و ژاپنی ترجمه شده است. تا جای ممکن سعی شده است که دستور خط زبان فارسی به کار رفته در این برنامه مطابق با دستور خط فرهنگستان زبان فارسی و کتاب دستور خط این فرهنگستان باشد.

در اندروید ۹ به بالا، خصوصاً هنگام فعال بودن Power mode ممکن است نیاز باشد در تنظیمات، در قسمت Optimize Battery Apps تقویم را استثنا کنید.

مانند قسمت‌های دیگر این برنامه، تضمینی در درستی عملکرد قطب‌نما نیست خصوصاً اینکه این قابلیت به وجود و درست تنظیم بودن سنسور قطب‌نمای دستگاه وابسته است. پیشنهاد می‌شود شمال را همیشه از طرق دیگر بدست آورید تا بتوانید از سایر اطلاعاتی که آن قسمت در اختیار قرار می‌دهد استفاده کنید ولی معمولاً این قسمت در صورتی که دستگاه را قبل از ورود به این بخش تخت و صاف قرار داده باشید درست عمل می‌کند."</string>
    <string name="capricorn_emoji" translatable="false">♑</string>
    <string name="aquarius_emoji" translatable="false">♒</string>
    <string name="pisces_emoji" translatable="false">♓</string>
    <string name="aries_emoji" translatable="false">♈</string>
    <string name="taurus_emoji" translatable="false">♉</string>
    <string name="gemini_emoji" translatable="false">♊</string>
    <string name="cancer_emoji" translatable="false">♋</string>
    <string name="leo_emoji" translatable="false">♌</string>
    <string name="virgo_emoji" translatable="false">♍</string>
    <string name="libra_emoji" translatable="false">♎</string>
    <string name="scorpio_emoji" translatable="false">♏</string>
    <string name="sagittarius_emoji" translatable="false">♐</string>
    <string name="not_set_time" translatable="false">--:--</string>
    <string name="calendar">Calendar</string>
    <string name="date_converter">Date Converter</string>
    <string name="compass">Compass</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="add_event">Add event</string>
    <string name="device_calendar_does_not_support">"Device calendar doesn't support the action"</string>
    <string name="today">Today</string>
    <string name="return_to_today">Return to today</string>
    <string name="goto_date">Go to date</string>
    <string name="go">Go</string>
    <string name="search_in_events">Search in events</string>
    <string name="date_diff_text">Distance: %1$s days (~%2$s years and %3$s months and %4$s days)</string>
    <string name="start_of_year_diff">%1$s days (~%2$s weeks or %3$s months) from start of the year</string>
    <string name="end_of_year_diff">%1$s days (~%2$s weeks or %3$s months) to end of the year</string>
    <string name="date_copied_clipboard">"%1$s" copied to clipboard.</string>
    <string name="year_name">Year name</string>
    <string name="year1">Monkey</string>
    <string name="year2">Rooster</string>
    <string name="year3">Dog</string>
    <string name="year4">Pig</string>
    <string name="year5">Rat</string>
    <string name="year6">Ox</string>
    <string name="year7">Tiger</string>
    <string name="year8">Rabbit</string>
    <string name="year9">Dragon</string>
    <string name="year10">Snake</string>
    <string name="year11">Horse</string>
    <string name="year12">Sheep</string>
    <string name="zodiac">Zodiac</string>
    <string name="capricorn">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="moonInScorpio">Moon is in Scorpio</string>
    <string name="events">Events</string>
    <string name="no_event">No event or appointment for this day.</string>
    <string name="warn_if_events_not_set">To select and show preferred holidays and events, visit the Settings</string>
    <string name="sunriseSunView">Sunrise</string>
    <string name="middaySunView">Midday</string>
    <string name="sunsetSunView">Sunset</string>
    <string name="length_of_day">Daytime: %1$sh %2$sm</string>
    <string name="remaining_daylight">Remaining: %1$sh %2$sm</string>
    <string name="owghat">Pray times</string>
    <string name="imsak">Imsak</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="sunset">Sunset</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="midnight">Midnight</string>
    <string name="spring_equinox">Spring equinox time of year %1$s: %2$s</string>
    <string name="select_type_date">Select date type</string>
    <string name="year">Year</string>
    <string name="select_year">Select year</string>
    <string name="month">Month</string>
    <string name="select_month">Select month</string>
    <string name="day">Day</string>
    <string name="select_day">Select day</string>
    <string name="date_exception">"The entered day isn't valid."</string>
    <string name="compass_not_found">Compass sensor not found</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="azkar">Azkar</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="previous_page">Previous Page</string>
    <string name="city">City</string>
    <string name="start">Start</string>
    <string name="edit_times">Edit times</string>
    <string name="download_upload">Download and upload times</string>
    <string name="monthly_times">Monthly pray times</string>
    <string name="quran">Quran</string>
    <string name="chapter">Chapter</string>
    <string name="search_the_whole_quran">Search the whole Quran</string>
    <string name="notes">Notes</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="download_audios">Download audio files</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="sura_name">Sura Name</string>
    <string name="aya_count">%s verse</string>
    <string name="revelation_order">Revelation order %s</string>
    <string name="sort_order">Chapter sort order</string>
    <string name="go_to_page">Go to page</string>
    <string name="go_to_juz">Go to juz</string>
    <string name="go_to_hizb">Go to hizb</string>
    <string name="your_note">Your note</string>
    <string name="go_to_aya">Go to verse</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>