<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_date_range"
        android:title="@string/calendar" />
    <item
        android:id="@+id/quran"
        android:icon="@drawable/ic_baseline_menu_book"
        android:title="@string/quran" />
    <item
        android:id="@+id/azkar"
        android:icon="@drawable/ic_azkar"
        android:title="@string/azkar" />
    <item
        android:id="@+id/monthly"
        android:icon="@drawable/ic_date_range"
        android:title="@string/monthly_times" />
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_times" />
    <item
        android:id="@+id/downup"
        android:icon="@drawable/ic_synce"
        android:title="@string/download_upload" />

    <item
        android:id="@+id/converter"
        android:icon="@drawable/ic_swap_vertical_circle"
        android:title="@string/date_converter" />

    <item
        android:id="@+id/compass"
        android:icon="@drawable/ic_explore"
        android:title="@string/compass" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info"
        android:title="@string/about" />

    <item
        android:id="@+id/donate"
        android:icon="@drawable/ic_baseline_monetization_on_24"
        android:title="@string/donate" />

    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_cancel"
        android:title="@string/exit" />

</menu>
