<?xml version="1.0" encoding="utf-8"?>
<ir.namoo.religiousprayers.ui.shared.MaskedCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardBackgroundColor="?attr/colorCard"
    app:cardElevation="@dimen/card_elevation"
    app:cardPreventCornerOverlap="false"
    app:shapeAppearanceOverlay="@style/ShapeAppearance.Sunflower.Card">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <ir.namoo.religiousprayers.ui.shared.MaskedCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:cardElevation="@dimen/card_elevation"
            app:cardPreventCornerOverlap="false"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Sunflower.Card">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorDrawerBackground"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_item_monthly_day_summary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:padding="5dp"
                    android:textColor="?attr/colorTextNormal"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_item_monthly_day_length"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:padding="5dp"
                    android:textColor="?attr/colorTextNormal"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ir.namoo.religiousprayers.ui.shared.MaskedCardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            app:divider="?attr/appDivider"
            app:dividerPadding="@dimen/divider_margin"
            app:showDividers="middle">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_item_monthly_fajr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/fajr"
                android:textColor="?attr/colorTextNormal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_item_monthly_sunrise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/sunrise"
                android:textColor="?attr/colorTextNormal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_item_monthly_dhuhr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/dhuhr"
                android:textColor="?attr/colorTextNormal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_item_monthly_asr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/asr"
                android:textColor="?attr/colorTextNormal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_item_monthly_maghrib"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/maghrib"
                android:textColor="?attr/colorTextNormal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_item_monthly_isha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/isha"
                android:textColor="?attr/colorTextNormal" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ir.namoo.religiousprayers.ui.shared.MaskedCardView>