<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chapter_item_root"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="false">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5.5"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/chapter_txt_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/chapter_txt_suraName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sura_name"
                android:textSize="@dimen/text_size_title" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_chapter_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_favorite_border"
                    app:tint="?attr/colorAccent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/chapter_txt_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text_size_description" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/chapter_txt_ayaCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aya_count"
                android:textSize="@dimen/text_size_description" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/chapter_txt_revelationOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/revelation_order"
                android:textSize="@dimen/text_size_description" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>